export const listData: Array<'Yes' | 'No'> = ['Yes', 'No'];
